--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -1210,6 +1210,47 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
   overflow: hidden;
 }
 
+/*heart box animation*/
+.heart-box {
+  animation: 1.8s infinite beatHeart;
+}
+
+.vibrating-box {
+  animation: 1s infinite shake;
+}
+
+@keyframes beatHeart {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.4);
+  }
+  40% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 @media (min-width:520px) {
   #snackbar {
     visibility: hidden;
@@ -2106,7 +2147,8 @@ and (orientation : landscape) {
     line-height: 17px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin: 0;
+    width: 80%;
   }
   .landscape-small-bottom .tada-game-modal-form-submit .tada-progress-bar {
     margin-bottom: 20px;
