--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -27,6 +27,10 @@
   opacity: 0;
 }
 
+#spinny_box svg {
+  padding: 8px;
+}
+
 #present_time_reminder_container {
   position: fixed;
   z-index: 1000;
@@ -35,16 +39,18 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  right: -40px;
+  top: 46.5%;
 }
 #present_time_reminder_container .present-time-reminder {
   align-items: center;
   transition: 0.4s all ease;
-  padding: 10px 15px 10px 10px;
+  padding: 10px 50px 10px 10px;
   background-color: white;
   display: flex;
   border-radius: 5px;
   cursor: pointer;
-  width: 67%;
+  width: 77%;
 }
 #present_time_reminder_container #present_time_reminder_1:hover {
   transition: 0.4s all ease;
@@ -58,6 +64,10 @@
   font-family: Montserrat;
   font-size: 20px;
   line-height: 150%;
+  display: flex;
+  justify-content: space-between;
+}
+#present_time_reminder_container .present-time-reminder .tada-expire-time {
   margin-left: 5px;
 }
 
@@ -732,7 +742,9 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
   font-family: Montserrat;
   font-size: 24px;
 }
-
+#present_time_reminder_1 .time-ticker-floating {
+  min-width: 85px;
+}
 /* counter */
 .counter-wrapper {
   display: none;
@@ -773,8 +785,10 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
   min-width: 20px;
 }
 .tada-custom-checkbox .tada-custom-checkbox-overlay svg {
-  margin-top: -3px;
-  width: 20px;
+  margin-top: 2px;
+  margin-left: 2px;
+  width: 12px;
+  height: 12px;
 }
 
 /* navigating progress bar */
@@ -1338,15 +1352,21 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
   #present_time_reminder_container .present-time-reminder {
     align-items: center;
     transition: 0.4s all ease;
-    padding: 8px 5px 8px 8px;
+    padding: 8px 30px 8px 8px;
     background-color: white;
     display: flex;
     border-radius: 5px;
     cursor: pointer;
-    width: 58%;
+    width: 64%;
   }
   #present_time_reminder_container .present-time-reminder span {
     font-size: 15px;
+  }
+  #present_time_reminder_container .tada-expire-time {
+    margin-left: 5px;
+  }
+  #present_time_reminder_1 .time-ticker-floating {
+    min-width: 62px;
   }
   .tada-game-modal .tada-game-modal-right .tada-game-modal-logo img {
     width: 60px;
