--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -1157,6 +1157,18 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.07);
 }
 
+.tada_remaind_bar .tada-remaind-bar-close {
+  position: absolute;
+  right: 15px;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
 #tada_notifi_cash_view {
   font-weight: bold;
 }
@@ -1849,6 +1861,16 @@ button.tada-game-modal-btn-close-fake .tada-dialog-btn-close-inner svg path {
 }
 
 @media only screen
+and (max-device-width : 700px)
+and (orientation : portrait) {
+  .tada_remaind_bar .tada-remaind-bar-close {
+    background-color: #846b8a;
+    margin-top: 17px;
+    right: 10px;
+  }
+}
+
+@media only screen
 and (max-device-width : 1024px)
 and (orientation : landscape) {
   .tada-wheel-wrapper .modal-dialog {
@@ -2393,6 +2415,10 @@ and (orientation : landscape) {
     width: 130px;
     height: 130px;
   }
+  #tada_ramaind_view_coupon_button {
+    width: 130px;
+    margin-left: 0;
+  }
 }
 
 .tada-close-button-div {
@@ -2445,6 +2471,10 @@ and (orientation : landscape) {
 .fade-out5 {
   -webkit-animation: fade-out 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation: fade-out 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+.fade-out4 {
+  -webkit-animation: fade-out 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: fade-out 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 .fade-in-custom {
