--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -2137,7 +2137,7 @@ and (orientation : landscape) {
     padding: 15px 20px 27px;
   }
   .landscape-small-top {
-    height: 42%;
+    height: 45%;
     box-shadow: inset 0 -8px 30px rgba(0, 0, 0, 0.05);
     border-radius: 0 20px 0 0;
     display: block;
@@ -2264,7 +2264,6 @@ and (orientation : landscape) {
   }
   .landscape-small-bottom .tada-game-modal-btn-close-container {
     display: block;
-    position: absolute;
     left: 35%;
     bottom: 3%;
   }
@@ -2312,6 +2311,16 @@ and (orientation : landscape) {
     width: 100% !important;
     height: 100% !important;
     position: absolute;
+  }
+}
+
+@media only screen
+and (max-device-width : 850px)
+and (min-device-height : 400px)
+and (orientation : landscape){
+  .landscape-small-top {
+    height: 46%;
+    padding: 25px 20px 25px;
   }
 }
 
@@ -2458,7 +2467,10 @@ and (orientation : landscape) {
     width: 20px;
   }
   .landscape-small-top .tada-game-modal-heading-2 {
-    font-size: 14px;
+    font-size: 13px;
+  }
+  .landscape-small-top .tada-game-modal-heading-2 img {
+    width: 15px;
   }
   .landscape-small > div {
     padding: 10px 15px 10px;
